fix number of logos on smaller screen desktops

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -4385,8 +4385,8 @@ body.dark-mode #cta-403.cs-image-only{
 @media only screen and (min-width: 48rem) {
   #logo-carousel{
     .blaze-slide {
-      max-width:33%;
-      flex: 0 0 33%;
+      max-width:50%;
+      flex: 0 0 50%;
     }
     .cs-container{
       max-width: 80rem;
@@ -4399,6 +4399,14 @@ body.dark-mode #cta-403.cs-image-only{
   }    
 }
 @media only screen and (min-width: 64rem) {
+  #logo-carousel{
+    .blaze-slide {
+      max-width:33%;
+      flex: 0 0 33%;
+    }
+  }
+}
+@media only screen and (min-width: 100rem) {
   #logo-carousel{
     .blaze-slide {
       max-width:25%;
